--- a/.github/workflows/pull-requests.yml
+++ b/.github/workflows/pull-requests.yml
@@ -47,7 +47,7 @@ jobs:
       - name: automerge
         uses: "pascalgn/automerge-action@4536e8847eb62fe2f0ee52c8fa92d17aa97f932f"
         env:
-          GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
+          GITHUB_TOKEN: "${{ secrets.ACCESS_TOKEN }}"
           MERGE_LABELS: ""
           MERGE_RETRIES: 10
           MERGE_RETRY_SLEEP: 10000
